--- a/assets/client/src/pages/internal/containers/common/inventory/rooms/pages/room-edit/template/room-edit.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/rooms/pages/room-edit/template/room-edit.html
@@ -44,26 +44,7 @@
                     <label class="control-label">{{ 'Beds' | translate }}</label>
                 </div>
                 <div class="col-xs-12 col-md-12">
-                    <div class="bed-container">
-                        <div *ngFor="#bedVM of roomVM.bedList; #bedIndex = index" class="bed-slot">
-                            <a class="btn btn-xs bed-remove-btn" (click)="removeBed(bedIndex)">
-                                <i class="fa unitpal-font">\</i>
-                            </a>
-                            <div class="bed-slot-inner" [title]="bedVM.bed.name">
-                                <span class="bed-slot-icon unitpal-font">{{bedVM.template.iconUrl}}</span>
-                                <br/>
-                                <small>{{bedVM.bed.name}}</small>
-                                <br/> {{bedVM.capacity.maxAdults}}
-                                <span class="unitpal-font">:</span> {{bedVM.capacity.maxChildren}}<span class="unitpal-font">;</span>
-                            </div>
-                        </div>
-                        <div *ngFor="#emptySlot of emptySlots" class="bed-slot available">
-
-                        </div>
-                    </div>
-                    <div class="bed-add">
-                        <button type="button" class="btn center-block btn-danger bed-add-btn" (click)="openBedsSelectModal()" [disabled]="maximuNumberOfBedsReached"><i class="fa fa-plus-circle"></i></button>
-                    </div>
+                    <bed-selector [availableBedList]="allAvailableBeds" [selectedBedList]="roomVM.bedList" (selectedBedListChanged)="diChangeSelectedBedList($event)"></bed-selector>
                 </div>
 
             </div>
