--- a/assets/client/src/pages/internal/containers/common/inventory/modals/beds/template/beds-modal.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/modals/beds/template/beds-modal.html
@@ -30,7 +30,7 @@
     </div>
     <div *ngIf="didPassedTheMaxNoOfBeds" class="row">
         <div class="col-md-12 bed-selection-message">
-            <small class="text-warning"><i class="fa fa-info-circle"></i> The maximum limit of {{maxBedNo}} beds per room has been passed.</small>
+            <small class="text-warning"><i class="fa fa-info-circle"></i>{{ 'The maximum limit beds per room has been exceeded.' | translate }} ({{ maxBedNo }})</small>
         </div>
     </div>
 </div>
