--- a/assets/client/src/pages/internal/containers/common/inventory/modals/beds/template/beds-modal.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/modals/beds/template/beds-modal.html
@@ -6,9 +6,9 @@
     <loading-component [isLoading]="isLoading"></loading-component>
 
     <div class="row">
-        <div class="col-md-4" *ngFor="#bedSelectionVM of bedSelectionVMList">
+        <div class="col-xs-6 col-md-4" *ngFor="#bedSelectionVM of bedSelectionVMList">
             <div class="row">
-                <div class="col-md-12" style="text-align:center;">
+                <div class="col-xs-12 col-md-12" style="text-align:center;">
                     <div class="btn bed-slot unselected" (click)="bedSelectionVM.numberOfInstances=bedSelectionVM.numberOfInstances+1">
                         <div class="bed-slot-inner" [title]="bedSelectionVM.bedVM.bed.name">
                             <div class="bed-btn">
@@ -22,14 +22,14 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-offset-3 col-md-6 form-group">
+                <div class="col-xs-offset-3 col-xs-6 col-md-offset-3 col-md-6 form-group">
                     <input type="number" class="form-control" [(ngModel)]="bedSelectionVM.numberOfInstances" [min]="minBedNo" [max]="maxBedNo">
                 </div>
             </div>
         </div>
     </div>
     <div *ngIf="didPassedTheMaxNoOfBeds" class="row">
-        <div class="col-md-12 bed-selection-message">
+        <div class="col-xs-12 col-md-12 bed-selection-message">
             <small class="text-warning"><i class="fa fa-info-circle"></i>{{ 'The maximum limit beds per room has been exceeded.' | translate }} ({{ maxBedNo }})</small>
         </div>
     </div>
