small css fix: lazy-loading-table, beds-modal

--- a/assets/client/src/common/utils/components/lazy-loading/template/lazy-loading-table.html
+++ b/assets/client/src/common/utils/components/lazy-loading/template/lazy-loading-table.html
@@ -66,7 +66,7 @@
 									<span class="unitpal-font">{{getItemValue(item, columnMeta.valueMeta)}}</span> 
 								</span>
 							</td>
-							<td>
+							<td class="table-item-action-group">
 								<a class="btn btn-xs" *ngIf="tableOptions.canCopy" (click)="copyItem(item)" title="{{ 'Clone' | translate }}">
 									<i class="fa unitpal-font">[</i>
 								</a>
