multiple selection in used room category modal

--- a/assets/client/src/pages/internal/containers/common/inventory/modals/room-categories/template/room-categories-modal.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/modals/room-categories/template/room-categories-modal.html
@@ -13,7 +13,7 @@
 			<tr *ngFor="#roomCategoryVM of roomCategoryVMList" [ngClass]="{active: isCategorySelected(roomCategoryVM)}">
 				<td class="selectable-row" 
 					*ngIf="!roomCategoryVM.isEditing" 
-					(click)="selectedCategoryVM=roomCategoryVM"> 
+					(click)="selectRoomCategory(roomCategoryVM)"> 
 					{{roomCategoryVM.roomCategory.displayName}} 
 				</td>
 				<td *ngIf="roomCategoryVM.isEditing"> 
