added notes in PP Overview

--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-overview/template/price-product-overview.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-overview/template/price-product-overview.html
@@ -23,6 +23,9 @@
 		<i class="fa fa-calendar-check-o"></i> <small>{{priceProductVM.cancellationConditionsString}}</small>
 	</div>
 	<div>
+		<small>{{priceProductVM.priceProduct.notes}}</small>
+	</div>
+	<div>
 		<a class="btn btn-lg" (click)="editPriceProduct()">
 			<i class="fa fa-pencil"></i> {{ 'Edit' | translate }}
 		</a>
