--- a/assets/client/src/pages/internal/containers/common/basic-info/overview/main/template/basic-info-overview-edit.html
+++ b/assets/client/src/pages/internal/containers/common/basic-info/overview/main/template/basic-info-overview-edit.html
@@ -139,4 +139,11 @@
 			</div>
 		</div>
 	</div>
+	<div class="row" *ngIf="canAutoSave">
+		<div class="col-xs-3 col-xs-offset-6 col-md-3 col-md-offset-6">
+			<button type="button" class="btn btn-primary btn-block" (click)="saveOverview()">
+				<i *ngIf="isSaving" class="fa fa-spinner fa-pulse"></i> {{ 'Save Changes' | translate }}
+			</button>
+		</div>
+	</div>
 </form>
