--- a/assets/client/src/pages/internal/containers/common/basic-info/payments-policies/main/template/basic-info-payments-policies-edit.html
+++ b/assets/client/src/pages/internal/containers/common/basic-info/payments-policies/main/template/basic-info-payments-policies-edit.html
@@ -41,3 +41,10 @@
 		<basic-info-tax-list [ccyCode]="hotel.ccyCode" [taxType]="otherTaxType"></basic-info-tax-list>
 	</div>
 </div>
+<div class="row" *ngIf="!isLoading">
+	<div class="col-xs-12 col-md-offset-8 col-md-4" *ngIf="canAutoSave">
+		<button type="button" class="btn btn-primary btn-block" (click)="savePaymentsAndPolicies()">
+			<i *ngIf="isSaving" class="fa fa-spinner fa-pulse"></i> {{ 'Save Changes' | translate }}
+		</button>
+	</div>
+</div>
