--- a/assets/client/src/pages/internal/containers/common/basic-info/property-details/main/template/basic-info-property-details-edit.html
+++ b/assets/client/src/pages/internal/containers/common/basic-info/property-details/main/template/basic-info-property-details-edit.html
@@ -96,3 +96,10 @@
     </div>
 
 </div>
+<div class="row" *ngIf="!isLoading">
+	<div class="col-xs-12 col-md-offset-8 col-md-4" *ngIf="canAutoSave">
+		<button type="button" class="btn btn-primary btn-block" (click)="savePropertyDetails()">
+			<i *ngIf="isSaving" class="fa fa-spinner fa-pulse"></i> {{ 'Save Changes' | translate }}
+		</button>
+	</div>
+</div>
