--- a/assets/client/src/pages/internal/containers/home/main/template/main-home-component.html
+++ b/assets/client/src/pages/internal/containers/home/main/template/main-home-component.html
@@ -1,1 +1,10 @@
-<h2>Home</h2>
+<header>
+	<main-header></main-header>
+</header>
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-xs-12 col-md-12 card">
+			<router-outlet></router-outlet>
+		</div>
+	</div>
+</div>
