--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/settings/subcomponents/beds/template/settings-beds.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/settings/subcomponents/beds/template/settings-beds.html
@@ -1,5 +1,3 @@
-<div class="row card-body">
-	<div class="col-xs-12">
-		<!--<beds></beds>-->
-	</div>
+<div class="card th-padding-top">
+	<beds></beds>
 </div>
