--- a/assets/client/src/pages/internal/containers/common/inventory/add-on-products/main/template/add-on-products.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/add-on-products/main/template/add-on-products.html
@@ -9,20 +9,18 @@
 		>
 	</lazy-loading-table>
 </div>
-<div class="col-xs-3 overview-right" *ngIf="!isEditing">
+<div [ngClass]="{'col-xs-3 overview-right': !isEditing, 'col-xs-9 edit-container': isEditing}">
 	<add-on-product-overview 
-		*ngIf="selectedAddOnProductVM" 
+		*ngIf="selectedAddOnProductVM && !isEditing" 
 		[addOnProductVM]="selectedAddOnProductVM"
 		(onEdit)="editAddOnProduct($event)">
 	</add-on-product-overview>
-	<wizard-steps-component></wizard-steps-component>
-	
-</div>
-<div class="col-xs-9 edit-container" *ngIf="isEditing">
 	<add-on-product-edit
-		*ngIf="selectedAddOnProductVM" 
+		*ngIf="selectedAddOnProductVM && isEditing" 
 		[filteredCategory]="filteredCategory"
 		[addOnProductVM]="selectedAddOnProductVM"
 		(onExit)="showViewScreen()">
 	</add-on-product-edit>
+	<div #overviewBottom>
+	</div>
 </div>
