--- a/assets/client/src/pages/internal/containers/home/main/template/main-home-component.html
+++ b/assets/client/src/pages/internal/containers/home/main/template/main-home-component.html
@@ -3,7 +3,7 @@
 </header>
 <div class="container-fluid">
 	<div class="row">
-		<div class="col-xs-12 col-md-12 card">
+		<div class="col-xs-12 col-md-12 full-height">
 			<router-outlet></router-outlet>
 		</div>
 	</div>
