--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/settings/subcomponents/basic-information/main/template/settings-basic-information.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/settings/subcomponents/basic-information/main/template/settings-basic-information.html
@@ -1,16 +1,15 @@
-<div class="row">
-	<div class="col-xs-12 col-md-12">
+<div class="row card page-info">
+	<div class="col-xs-12 col-md-12 th-padding-bottom">
 		<ul class="nav nav-tabs">
-			<li *ngFor="#basicInfoPage of basicInfoPageList"  [ngClass]="{'active': basicInfoPage.selected}">
+			<li *ngFor="#basicInfoPage of basicInfoPageList" [ngClass]="{'active': basicInfoPage.selected}">
 				<a (click)="changePage(basicInfoPage)">
 					{{basicInfoPage.pageName | translate}}
 				</a>
 			</li>
 		</ul>
 	</div>
-</div>
-<div class="row card page-info">
-	<div class="col-xs-12 col-md-12 basic-info-container">
+	<div class="col-xs-12 col-md-12 basic-info-container th-padding-bottom">
 		<router-outlet></router-outlet>
+		<br/><br/>
 	</div>
 </div>
