--- a/assets/client/src/pages/internal/containers/common/basic-info/property-details/main/template/basic-info-property-details-edit.html
+++ b/assets/client/src/pages/internal/containers/common/basic-info/property-details/main/template/basic-info-property-details-edit.html
@@ -7,7 +7,7 @@
 
         <div class="form-group">
 			<div class="input-group" [ngClass]="{'form-warning': displayTimezoneError()}">
-            	<select class="select2_single form-control" [ngModel]="hotel.timezone" (change)="updateTimezone($event.target.value)">
+            	<select class="select2_single form-control" [ngModel]="hotel.timezone" (ngModelChange)="updateTimezone($event)">
                     <option value="" disabled></option>
                 	<option *ngFor="#timezone of timezoneList" [value]="timezone.name">{{timezone.name}}</option>
             	</select>
