--- a/assets/client/src/pages/internal/containers/common/inventory/customer-register/pages/customer-edit/container/template/customer-register-edit-container.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/customer-register/pages/customer-edit/container/template/customer-register-edit-container.html
@@ -4,7 +4,7 @@
 		<div class="col-md-4 col-xs-6 form-group">
 			<div class="input-group">
 				<label>{{ 'Type of customer' | translate }}</label>
-				<select class="form-control" [ngModel]="customerVM.customer.type" (change)="didChangeCustomerType($event.target.value)">
+				<select class="form-control" [ngModel]="customerVM.customer.type" (ngModelChange)="didChangeCustomerType($event)">
 					<option *ngFor="#custDetailsMeta of custDetailsMetaList" [value]="custDetailsMeta.customerType">{{custDetailsMeta.customerTypeName | translate}}</option>
 				</select>
 			</div>
