--- a/assets/client/src/pages/internal/containers/common/inventory/modals/yield-filter/template/yield-filter-modal.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/modals/yield-filter/template/yield-filter-modal.html
@@ -32,7 +32,7 @@
 							<div class="color-box" [ngClass]="yieldFilterValueVM.colorMeta.colorCodeStr"></div>
 						</div>
 						<div class="col-xs-6">
-							<select class="form-control" *ngIf="yieldFilterValueVM.isEditing" [ngModel]="yieldFilterValueVM.filterValue.colorCode" (change)="didChangeColorCodeFor(yieldFilterValueVM, $event.target.value)">
+							<select class="form-control" *ngIf="yieldFilterValueVM.isEditing" [ngModel]="yieldFilterValueVM.filterValue.colorCode" (ngModelChange)="didChangeColorCodeFor(yieldFilterValueVM, $event)">
 								<option *ngFor="#colorMeta of colorFilter.colorMetaList" [value]="colorMeta.colorCodeStr">{{ colorMeta.displayName | translate }}</option>
 							</select>
 						</div>
