--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/cancellation/template/price-product-edit-cancellation-section.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/cancellation/template/price-product-edit-cancellation-section.html
@@ -13,7 +13,7 @@
 	</div>
 
 	<div class="form-group">
-		<select class="form-control" [ngModel]="conditions.policyType" (change)="didChangePolicyType($event.target.value)" [disabled]="readonly">
+		<select class="form-control" [ngModel]="conditions.policyType" (ngModelChange)="didChangePolicyType($event)" [disabled]="readonly">
 			<option *ngFor="#cancellationPolicyMeta of cancellationPolicyMetaList" [value]="cancellationPolicyMeta.policyType">
 				{{cancellationPolicyMeta.policyName | translate}}
 			</option>
@@ -55,7 +55,7 @@
 			</small>
 		</div>
 		<div class="col-xs-12 form-group">
-			<select class="form-control" [ngModel]="conditions.penaltyType" (change)="didChangePenaltyType($event.target.value)" [disabled]="readonly">
+			<select class="form-control" [ngModel]="conditions.penaltyType" (ngModelChange)="didChangePenaltyType($event)" [disabled]="readonly">
 				<option *ngFor="#cancellationPenaltyMeta of filteredCancellationPenaltyMetaList" [value]="cancellationPenaltyMeta.penaltyType">
 					{{cancellationPenaltyMeta.penaltyName | translate}}
 				</option>
